# ComputerGraphicsT3

./: CMakeLists.txt
src/Canvas2D/: Canvas2D.cpp  Canvas2D.h
src/Helpers/: Callback.h  Utils.h
src/Objects/: Crankshaft.cpp  Crankshaft.h  Crankshaft2D.cpp  Crankshaft2D.h  Crankshaft3D.cpp  Crankshaft3D.h  Face.h  Motor.cpp  Motor.h  Object.h  ObjectCreator.cpp  ObjectCreator.h  Triangle.h
src/Primitives/: CircleButton.cpp  CircleButton.h  Color.cpp  Color.h  Constants.h  Edge.h  Float2.cpp  Float2.h  Float3.h  Int2.cpp  Int2.h  Types.h
src/UI/: Button.cpp  Button.h  Circle.cpp  Circle.h  Graph.cpp  Graph.h  IPointInside.h  MultipleToggleOption.cpp  MultipleToggleOption.h  OptionToggle.cpp  OptionToggle.h  Rect.cpp  Rect.h  Slider.cpp  Slider.h  TextButton.cpp  TextButton.h
src/World/: Camera.cpp  Camera.h  Debug.cpp  Debug.h  EventSystem.cpp  EventSystem.h  Main.cpp  Main.h  Screen.cpp  Screen.h
